# Prescriptivism

./: .clang-format  .gitignore  CMakeLists.txt  README.md  start.sh
assets/Shaders/: Identity.frag  Identity.vert  Image.frag  Image.vert  Primitive.frag  Primitive.vert  Rectangle.frag  Rectangle.vert  Text.frag  Text.vert  Throbber.frag  Throbber.vert
include/Client/: Client.hh  Game.hh  gl-headers.hh
include/Client/Render/: GL.hh  Render.hh
include/Client/UI/: Animations.hh  Effect.hh  UI.hh  UI2.hh
include/Client/pr/: UIMacros.hh  gl-headers.hh
include/Server/: Server.hh
include/Shared/: Cards.hh  Constants.hh  Packets.hh  Serialisation.hh  TCP.hh  Utils.hh  Validation.hh
include/Shared/pr/: Packets.hh  Utils.hh
lib/Client/: Client.ccm  PowerCards.ccm  UI.ccm  Utils.ccm
lib/Client/Render/: GL.ccm  Render.ccm
lib/Client/UI/: UI.ccm
lib/Server/: Server.ccm
lib/Shared/: Cards.ccm  Constants.ccm  Packets.ccm  Serialisation.ccm  TCP.ccm  Utils.ccm  Validation.ccm
src/Client/: Client.cc  Game.cc  Main.cc  UI.cc
src/Client/Render/: GL.cc  Render.cc
src/Client/UI/: Animations.cc  Card.cc  TextWidgets.cc  UI.cc  UI2.cc
src/Server/: Main.cc  Server.cc
src/Shared/: Cards.cc  TCP.cc  Utils.cc  Validation.cc
tools/: DevRunner.cc
